:recycle: 코드 중복 제거 및 stream 코드 리팩토링